--- a/src/app/reportes/reportes.component.html
+++ b/src/app/reportes/reportes.component.html
@@ -12,7 +12,7 @@
                   <div class="col-3">
                     <div class="form-floating">
                       <select class="form-select" name="datasource">
-                        <option>Individual BIM [Individual]</option>
+                        <option>Medios De Pago</option>
                       </select>
                       <label for="floatingSelect">Recurso</label>
                     </div>
